crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__enums_option_javascript@enums__option.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
expression: apply_redactions(&output)
input_file: tests/enums/option.tlang
---
true
false
false
true
10

[stdin]:201
function panic(msg) { throw new Error(msg); }
                      ^

Error: Called unwrap on None
    at [STDIN_WRAPPER]
    at [STDIN_WRAPPER]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [STDIN_WRAPPER]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]
    at [NODE_INTERNAL_STACK]

Node.js [VERSION]
